[Issue Fixed: Sidebar's layout issue resolved.]

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -225,7 +225,7 @@ td {
             overflow: auto;
             border-right: 2px solid;
             border-right-color: rgba(151,151,151,0.5);
-            margin-top: 40px;
+            padding-top: 40px;
 
             ul {
                 padding: 0;
